# MagpieApp

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: ARTISAN_STUDIO.md  RELEASING.md  STAGE4_PATTERN_PIPELINE.md
scripts/: release-0.2.0.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: embroidery.rs  image_processor.rs  lib.rs  pdf_export.rs  regions.rs  selection.rs  stage4.rs
src-tauri/src/project_hub/: commands.rs  models.rs
src-tauri/tests/fixtures/stage4/: README.md
src/audio/: startupSound.ts
src/components/: ControlPanel.tsx  ExportMenu.tsx  FabricPanel.tsx  Layout.tsx  Legend.tsx  MascotEyes.tsx  UploadZone.tsx
src/exports/: csv-export.ts  native-pdf-export.ts  pattern-svg-export.ts  png-export.ts
src/hooks/: useExport.ts  useNativeProcessing.ts  useWorkflowTransition.ts
src/lib/: camera.ts  color-utils.ts  constants.ts  dev-instrumentation.ts  hoop-layout.ts  hoop-mask.ts
src/model/: Pattern.ts  SelectionArtifact.ts  manual-edits.ts  pattern-color.sanity.ts
src/palette/: matcher.ts
src/platform/: index.ts  platform.desktop.ts  platform.web.ts  types.ts
src/processing/: color-spaces.ts  coloring-book.ts  image-utils.ts  native-types.ts  organic-regions.ts  pattern-pipeline.ts  process-pattern.ts  region-graph.ts  vectorize.ts
src/project/: persistence.ts
src/project-hub/: api.ts  types.ts
src/store/: pattern-store.ts  project-hub-store.ts  ui-store.ts
src/types/: index.ts
src/viewer/: ColoringBookViewer.tsx  PatternViewer.tsx  (+1 more)
(+27 files in other folders)
