[package]
name = "magpie"
version = "0.2.0"
description = "Magpie desktop app"
authors = ["Magpie"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "magpie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
stage4-fixtures = []

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rfd = "0.15"
opener = "0.8"
regex = "1.10"

# Image processing
image = "0.25"
imageproc = "0.25"
vtracer = "0.6"
visioncortex = "0.8"
rayon = "1.10"
sha2 = "0.10"

# Color science (CIEDE2000 Delta-E)
palette = "0.7"
